# functional-stream-processing-meetup-sample

./: .gitignore  README.md  functional-stream-processing-meetup-sample.cabal
src/: Handle.hs  IOStreams.hs  Lazy.hs  Main.hs
