name: functional-stream-processing-meetup-sample
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: MIT
maintainer: me@fujimuradaisuke.com
homepage: http://github.com/fujimura/functional-stream-processing-meetup-sample#readme
synopsis: Simple project template from stack
description:
    Please see README.md
category: Web
author: Daisuke Fujimura

executable functional-stream-processing-meetup-sample
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        attoparsec -any,
        io-streams -any,
        deepseq -any,
        bytestring -any,
        text -any,
        transformers -any,
        unordered-containers -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        IOStreams
        Lazy
        Handle
    ghc-options: -threaded -Wall

